# nonlocalheatequation

./: CMakeLists.txt  Config.h.in  README.md
.circleci/: config.yml
.circleci/Docker/: Dockerfile
.github/: labeler.yml
1d_serial/: 1d_nonlocal_serial.cpp  CMakeLists.txt  print_time_results.hpp
data/: 100x100.msh  10x10.msh  200x200.msh  50x50.msh
description/: CMakeLists.txt  latexBuild.sh  main.bib  problem_description.tex
docs/: conf.doxy.in
include/: Config.h  print_time_results.hpp  writer.cpp  writer.h
src/: 1d_nonlocal_serial.cpp  2d_nonlocal_async.cpp  2d_nonlocal_distributed.cpp  2d_nonlocal_serial.cpp  domain_decomposition.cpp  point.h  print_time_results.hpp
tests/: 1d.txt  2d.txt  2d_async.txt  2d_distributed.txt  load_balance_25s_2n.txt  load_balance_25s_4n.txt  load_balance_25s_8n.txt  load_balance_4s_2n.txt
